--- a/day-five/asset/asset/practice/index.html
+++ b/day-five/asset/asset/practice/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <section class="wrapper">
+            <h1>
+                <img src="images/logo.png" alt="NFTERS">
+            </h1>
 
+            <!-- short form  = ul>li*5>a  -->
+
+            <ul>
+                <li><a href="#">Marketplace</a></li>
+                <li><a href="#">Resource</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Upload</a></li>
+                <li><a href="#">Connect Wallet</a></li>
+            </ul>
+            
+        </section>
     
+    </header>
 </body>
 </html>
