--- a/day-five/asset/asset/practice/index.html
+++ b/day-five/asset/asset/practice/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFTERS</title>
+    <!-- google roboto font links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- styles.css file linked -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,5 +31,19 @@
         </section>
     
     </header>
+
+    <section id="home">
+        <section class="wrapper">
+            <div class="left">
+                <h1>Discover, and collect digital art NFTs</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ipsa. Ducimus a laudantium est nulla? Consequuntur minus corporis, explicabo nemo animi praesentium saepe. Officia recusandae quidem dolorum ipsa sed reiciendis?</p>
+                <a href="#">Explore Now</a>
+            </div>
+            <div class="right">
+                <img src="images/hero.png" alt="NFT">
+            </div>
+        </section>
+
+    </section>
 </body>
 </html>
