header design completed

--- a/day-five/asset/asset/task/index.html
+++ b/day-five/asset/asset/task/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodyar</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Font link from google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <section class="wrapper">
             <h1>
-                <img src="" alt="">
+                <img src="images/logo.png" alt="Foodyar-logo">
             </h1>
 
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="" class="rounded-text-decoration">Home</a></li>
                 <li><a href="">Beverages</a></li>
                 <li><a href="">Chef</a></li>
                 <li><a href="">Ingredient</a></li>
