--- a/day-five/asset/asset/task/index.html
+++ b/day-five/asset/asset/task/index.html
@@ -28,5 +28,21 @@
 
         </section>
     </header>
+
+    <section id="home">
+        <section class="wrapper">
+            <div class="left ">
+                <div class="left-section">
+                    <h1> <span class="rounded-text-decoration">Eat</span> What You Cook <br> With Us, <span class="rounded-text-decoration">Together</span>!</h1>
+                    <p>When you eat something that cooked by <br> yourself, the happiness is priceless</p>
+                    <a href="#">Decide a Menu</a>
+                </div>
+               
+            </div>
+            <div class="right">
+                <img src="images/video (1).png" alt="home-image">
+            </div>
+        </section>
+    </section>
 </body>
 </html>
