--- a/day-8/portfolio-website-asset/portfolio-website-asset/index.html
+++ b/day-8/portfolio-website-asset/portfolio-website-asset/index.html
@@ -6,10 +6,25 @@
     <title>Portfolio Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
+    <!-- google poppins font cdn -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-[#161513]">
 
-    
-    
+    <header class="bg-[#1e1e1e]  text-white ">
+        <section class="wrapper flex justify-between items-center h-[90px]" >
+            <h1><img src="images/logo.png" alt="logo" class="w-[90px]"></h1>
+            <ul class="flex justify-end items-center">
+                <li class="mr-10"><a href="#" text-[16px] class="font-semibond">Home</a></li>
+                <li class="mr-10"><a href="#" text-[16px] class="font-semibond">Projects</a></li>
+                <li class="mr-10"><a href="#" text-[16px] class="font-semibond">Experience</a></li>
+                <li class="mr-10"><a href="#" text-[16px] class="font-semibond">Contact</a></li>
+            </ul>
+        </section>
+    </header>
+
+
 </body>
 </html>
