first section completed

--- a/day-8/portfolio-website-asset/portfolio-website-asset/index.html
+++ b/day-8/portfolio-website-asset/portfolio-website-asset/index.html
@@ -25,6 +25,19 @@
         </section>
     </header>
 
+    <section class="py-20 text-white">
+        <section class="wrapper">
+            <div class="flex justify-center mb-10">
+                <img src="images/avatar.png" alt="avatar" class="w-[180px]">
+            </div>
+            <h1 class="text-center font-bold text-[56px] leading-tigh mb-10">I do code and <br> make content <span class="bg-gradient-to-br from-orange-400 to-purple-600 text-transparent bg-clip-text">about it!</span> </h1>
+            <p class="text-[14px] font-normal text-center w-[50%] m-auto opacity-50 mb-10">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi iure et reprehenderit tenetur distinctio non porro voluptatum eveniet molestiae. Veniam, commodi? Iure eos delectus commodi nulla reprehenderit itaque, saepe neque </p>
+            <div class="flex justify-center items-center">
+                <a href="#" class="bg-white text-black py-3 px-6 rounded-full font-semibold mr-5">Get it touch</a>
+                <a href="#" class="border border-white py-3 px-6 rounded-full font-semibold">Download cv </a>
+            </div>
+        </section>
+    </section>
 
 </body>
 </html>
