task 3 / day 8 work design completed

--- a/day-7/spotify-website-asset/spotify-website-asset/index.html
+++ b/day-7/spotify-website-asset/spotify-website-asset/index.html
@@ -6,6 +6,7 @@
     <title>Spotify Landing Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/spotify-logo-png-.png">
     <!-- Google font cdn  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
