--- a/day-8/portfolio-website-asset/portfolio-website-asset/index.html
+++ b/day-8/portfolio-website-asset/portfolio-website-asset/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/avatar.png">
     <!-- google poppins font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,6 +39,108 @@
             </div>
         </section>
     </section>
+
+    <section class="pb-20">
+        <section class="wrapper">
+            <h1 class="text-center text-[32px] font-semibold text-white opacity-70">EXPERIENCE WITH</h1>
+            <div class="flex justify-center items-center mt-10">
+                <img src="images/javascript.png" alt="image" class="w-[40px] mr-10">
+                <img src="images/nodejs.png" alt="image" class="w-[40px] mr-10">
+                <img src="images/html.png" alt="image" class="w-[40px] mr-10">
+                <img src="images/css.png" alt="image" class="w-[40px] mr-10">
+                <img src="images/reactjs.png" alt="image" class="w-[40px]">   
+            </div>
+        </section>
+    </section>
+
+    <section class="pb-20">
+        <section class="wrapper">
+            <h1 class="text-center text-[32px] font-bold bg-gradient-to-b from-orange-400 to-orange-600 text-transparent bg-clip-text mb-10">PROJECTS</h1>
+            <div class="flex justify-center items-center">
+                <div class="w-[35%] bg-[#1e1e1e] mr-10  rounded-2xl">
+                    <img src="images/html-project.png" alt="IMAGE">
+                    <div class="flex justify-between items-center p-4 text-white">
+                        <div>
+                            <h3 class="text-[12px] font-semibold opacity-70">CLICK HERE TO VISIT</h3>
+                            <h1 class="text-[16px] font-semibold">HTML TUTORIALS</h1>
+                        </div>
+                        <img src="images/arrow.png" alt="arrow" class="w-[18px]">
+                    </div>
+                </div>
+                <div class="w-[35%] bg-[#1e1e1e]  rounded-2xl">
+                    <img src="images/css-project.png" alt="IMAGE">
+                    <div class="flex justify-between items-center p-4 text-white">
+                        <div>
+                            <h3 class="text-[12px] font-semibold opacity-70">CLICK HERE TO VISIT</h3>
+                            <h1 class="text-[16px] font-semibold">HTML TUTORIALS</h1>
+                        </div>
+                        <img src="images/arrow.png" alt="arrow" class="w-[18px]">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <section class="pb-20">
+        <section class="wrapper">
+            <h1 class="text-center text-[32px] font-bold bg-gradient-to-b from-[#4aa0f4] to-[#2581db] text-transparent bg-clip-text mb-10">EXPERIENCE</h1>
+            <div class="mb-10">
+                <div class="flex justify-between items-center text-white mb-10">
+                    <div class="flex justify-between items-center">
+                        <img src="images/google-logo.png" alt="google logo" class="w-[25px] mr-10">
+                        <h3 class="text-[24px] font-bold">Lead Software Engineer at Google</h3>
+                    </div>
+                    <span class="text-[14px] font-normal opacity-60">Nov 2019 - Present</span>
+                </div>
+                <p class="text-[16px] font-normal text-white opacity-60">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugiat, perspiciatis tempora eveniet, atque sint voluptatibus voluptate soluta harum, totam cum maiores nemo molestiae. Autem nemo recusandae quam culpa dolor.
+                </p>
+            </div>
+
+            <div class="mb-10">
+                <div class="flex justify-between items-center text-white mb-10">
+                    <div class="flex justify-between items-center">
+                        <img src="images/apple-logo.png" alt="google logo" class="w-[25px] mr-10">
+                        <h3 class="text-[24px] font-bold">Junior Software Engineer at Apple</h3>
+                    </div>
+                    <span class="text-[14px] font-normal opacity-60">Jan 2018 - Dec 2017</span>
+                </div>
+                <p class="text-[16px] font-normal text-white opacity-60">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugiat, perspiciatis tempora eveniet, atque sint voluptatibus voluptate soluta harum, totam cum maiores nemo molestiae. Autem nemo recusandae quam culpa dolor.
+                </p>
+            </div>
+
+            <div class="mb-10">
+                <div class="flex justify-between items-center text-white mb-10">
+                    <div class="flex justify-between items-center">
+                        <img src="images/meta-logo.png" alt="google logo" class="w-[25px] mr-10">
+                        <h3 class="text-[24px] font-bold">Software Engineer at Meta</h3>
+                    </div>
+                    <span class="text-[14px] font-normal opacity-60">Jan 2017 - Oct 2019</span>
+                </div>
+                <p class="text-[16px] font-normal text-white opacity-60">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugiat, perspiciatis tempora eveniet, atque sint voluptatibus voluptate soluta harum, totam cum maiores nemo molestiae. Autem nemo recusandae quam culpa dolor.
+                </p>
+            </div>
+        </section>
+    </section>
+
+    <footer class="bg-[#1e1e1e] py-20 text-white">
+        <section class="wrapper">
+            <h1 class="text-[32px] font-semibold mb-10">Contact</h1>
+            <p class="text-[16px] font-normal opacity-60">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, deleniti. Odio quo exercitationem dicta itaque, rem ad inventore eos voluptatibus facere enim fuga molestiae quisquam repellat, amet impedit consequatur nemo.</p>
+            <div class="flex justify-start items-cente my-10">
+                <img src="images/email.png" alt="email" class="w-[18px] mr-1">
+                <p class="text-[16px] font-normal opacity-70">tegrand@exaple.com</p>
+            </div>
+
+            <div class="flex justify-start items-center">
+                <img src="images/instagram.png" alt="instagram" class="w-[16px] mr-4">
+                <img src="images/x.png" alt="x" class="w-[16px] mr-4">
+                <img src="images/youtube.png" alt="yt" class="w-[16px] mr-4">
+            </div>
+        </section>
+    </footer>
 
 </body>
 </html>
