--- a/day-8/portfolio-website-asset/portfolio-website-asset/index.html
+++ b/day-8/portfolio-website-asset/portfolio-website-asset/index.html
@@ -31,23 +31,23 @@
             <div class="flex justify-center mb-10">
                 <img src="images/avatar.png" alt="avatar" class="w-[180px]">
             </div>
-            <h1 class="text-center font-bold text-[56px] leading-tigh mb-10">I do code and <br> make content <span class="bg-gradient-to-br from-orange-400 to-purple-600 text-transparent bg-clip-text">about it!</span> </h1>
-            <p class="text-[14px] font-normal text-center w-[50%] m-auto opacity-50 mb-10">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi iure et reprehenderit tenetur distinctio non porro voluptatum eveniet molestiae. Veniam, commodi? Iure eos delectus commodi nulla reprehenderit itaque, saepe neque </p>
+            <h1 class="text-center font-bold text-[56px] leading-none mb-5">I do code and <br> make content <span class="bg-gradient-to-br from-orange-400 to-purple-600 text-transparent bg-clip-text">about it!</span> </h1>
+            <p class="text-[16px] font-normal text-center w-[60%] m-auto opacity-50 mb-10">I am a seasoned full-stack software engineer with over <br> 8 years of professional experience, specializing in backend development. My expertise lies in crafting robust and scalable SaaS-based architectures on the Amazon AWS platform.</p>
             <div class="flex justify-center items-center">
-                <a href="#" class="bg-white text-black py-3 px-6 rounded-full font-semibold mr-5">Get it touch</a>
-                <a href="#" class="border border-white py-3 px-6 rounded-full font-semibold">Download cv </a>
+                <a href="#" class="bg-white text-black py-4 px-8 rounded-full font-semibold mr-5">Get it touch</a>
+                <a href="#" class="border-2 border-white py-4 px-8 rounded-full font-semibold">Download cv </a>
             </div>
         </section>
     </section>
 
     <section class="pb-20">
         <section class="wrapper">
-            <h1 class="text-center text-[32px] font-semibold text-white opacity-70">EXPERIENCE WITH</h1>
+            <h1 class="text-center text-[24px] font-medium text-white opacity-70">EXPERIENCE WITH</h1>
             <div class="flex justify-center items-center mt-10">
-                <img src="images/javascript.png" alt="image" class="w-[40px] mr-10">
-                <img src="images/nodejs.png" alt="image" class="w-[40px] mr-10">
-                <img src="images/html.png" alt="image" class="w-[40px] mr-10">
-                <img src="images/css.png" alt="image" class="w-[40px] mr-10">
+                <img src="images/javascript.png" alt="image" class="w-[40px] mr-12">
+                <img src="images/nodejs.png" alt="image" class="w-[40px] mr-12">
+                <img src="images/html.png" alt="image" class="w-[40px] mr-12">
+                <img src="images/css.png" alt="image" class="w-[40px] mr-12">
                 <img src="images/reactjs.png" alt="image" class="w-[40px]">   
             </div>
         </section>
@@ -57,24 +57,24 @@
         <section class="wrapper">
             <h1 class="text-center text-[32px] font-bold bg-gradient-to-b from-orange-400 to-orange-600 text-transparent bg-clip-text mb-10">PROJECTS</h1>
             <div class="flex justify-center items-center">
-                <div class="w-[35%] bg-[#1e1e1e] mr-10  rounded-2xl">
-                    <img src="images/html-project.png" alt="IMAGE">
+                <div class="w-[40%] bg-[#1e1e1e] mr-10  rounded-2xl">
+                    <img src="images/html-project.png" alt="IMAGE" >
                     <div class="flex justify-between items-center p-4 text-white">
                         <div>
-                            <h3 class="text-[12px] font-semibold opacity-70">CLICK HERE TO VISIT</h3>
-                            <h1 class="text-[16px] font-semibold">HTML TUTORIALS</h1>
+                            <h3 class="text-[10px] font-semibold opacity-70">CLICK HERE TO VISIT</h3>
+                            <h1 class="text-[18px] font-bold">HTML TUTORIALS</h1>
                         </div>
-                        <img src="images/arrow.png" alt="arrow" class="w-[18px]">
+                        <img src="images/arrow.png" alt="arrow" class="w-[12px]">
                     </div>
                 </div>
-                <div class="w-[35%] bg-[#1e1e1e]  rounded-2xl">
+                <div class="w-[40%] bg-[#1e1e1e]  rounded-2xl">
                     <img src="images/css-project.png" alt="IMAGE">
                     <div class="flex justify-between items-center p-4 text-white">
                         <div>
-                            <h3 class="text-[12px] font-semibold opacity-70">CLICK HERE TO VISIT</h3>
-                            <h1 class="text-[16px] font-semibold">HTML TUTORIALS</h1>
+                            <h3 class="text-[10px] font-semibold opacity-70">CLICK HERE TO VISIT</h3>
+                            <h1 class="text-[18px] font-bold">HTML TUTORIALS</h1>
                         </div>
-                        <img src="images/arrow.png" alt="arrow" class="w-[18px]">
+                        <img src="images/arrow.png" alt="arrow" class="w-[12px]">
                     </div>
                 </div>
             </div>
@@ -82,44 +82,45 @@
     </section>
 
     <section class="pb-20">
-        <section class="wrapper">
-            <h1 class="text-center text-[32px] font-bold bg-gradient-to-b from-[#4aa0f4] to-[#2581db] text-transparent bg-clip-text mb-10">EXPERIENCE</h1>
-            <div class="mb-10">
-                <div class="flex justify-between items-center text-white mb-10">
+        <section class="wrapper px-16">
+            <h1 class="text-center text-[32px] font-extrabold bg-gradient-to-b from-[#4aa0f4] to-[#2581db] text-transparent bg-clip-text mb-10">EXPERIENCE</h1>
+            
+            <div class="mb-12">
+                <div class="flex justify-between items-center text-white mb-4">
                     <div class="flex justify-between items-center">
-                        <img src="images/google-logo.png" alt="google logo" class="w-[25px] mr-10">
-                        <h3 class="text-[24px] font-bold">Lead Software Engineer at Google</h3>
+                        <img src="images/google-logo.png" alt="google logo" class="w-[34px] mr-4">
+                        <h3 class="text-[22px] font-bold">Lead Software Engineer at Google</h3>
                     </div>
                     <span class="text-[14px] font-normal opacity-60">Nov 2019 - Present</span>
                 </div>
-                <p class="text-[16px] font-normal text-white opacity-60">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugiat, perspiciatis tempora eveniet, atque sint voluptatibus voluptate soluta harum, totam cum maiores nemo molestiae. Autem nemo recusandae quam culpa dolor.
+                <p class="text-[15px] font-normal text-white opacity-60">
+                    As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.
                 </p>
             </div>
 
-            <div class="mb-10">
-                <div class="flex justify-between items-center text-white mb-10">
+            <div class="mb-12">
+                <div class="flex justify-between items-center text-white mb-4">
                     <div class="flex justify-between items-center">
-                        <img src="images/apple-logo.png" alt="google logo" class="w-[25px] mr-10">
-                        <h3 class="text-[24px] font-bold">Junior Software Engineer at Apple</h3>
+                        <img src="images/apple-logo.png" alt="google logo" class="w-[34px] mr-4">
+                        <h3 class="text-[22px] font-bold">Junior Software Engineer at Apple</h3>
                     </div>
                     <span class="text-[14px] font-normal opacity-60">Jan 2018 - Dec 2017</span>
                 </div>
-                <p class="text-[16px] font-normal text-white opacity-60">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugiat, perspiciatis tempora eveniet, atque sint voluptatibus voluptate soluta harum, totam cum maiores nemo molestiae. Autem nemo recusandae quam culpa dolor.
+                <p class="text-[14px] font-normal text-white opacity-60">
+                    During my tenure at Apple, I held the role of Software Architect, where I plated a key role in shaping the architecture of mission-critical software projects. Responsible for designing scalable and efficient systems, I provided technical leadrship to a cross-functional team.
                 </p>
             </div>
 
-            <div class="mb-10">
-                <div class="flex justify-between items-center text-white mb-10">
+            <div class="mb-12">
+                <div class="flex justify-between items-center text-white mb-4">
                     <div class="flex justify-between items-center">
-                        <img src="images/meta-logo.png" alt="google logo" class="w-[25px] mr-10">
-                        <h3 class="text-[24px] font-bold">Software Engineer at Meta</h3>
+                        <img src="images/meta-logo.png" alt="google logo" class="w-[34px] mr-4">
+                        <h3 class="text-[22px] font-bold">Software Engineer at Meta</h3>
                     </div>
                     <span class="text-[14px] font-normal opacity-60">Jan 2017 - Oct 2019</span>
                 </div>
-                <p class="text-[16px] font-normal text-white opacity-60">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fugiat, perspiciatis tempora eveniet, atque sint voluptatibus voluptate soluta harum, totam cum maiores nemo molestiae. Autem nemo recusandae quam culpa dolor.
+                <p class="text-[14px] font-normal text-white opacity-60">
+                    at Meta, I served as a Software Engineer, focusing on the design and implementation of backend systems for the social media giant's dynamic platform. Working on projects that involved large-scale data processing and user engagement features, I leaveraged my expertice to ensure seamless functionality and scalability.
                 </p>
             </div>
         </section>
@@ -128,16 +129,16 @@
     <footer class="bg-[#1e1e1e] py-20 text-white">
         <section class="wrapper">
             <h1 class="text-[32px] font-semibold mb-10">Contact</h1>
-            <p class="text-[16px] font-normal opacity-60">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, deleniti. Odio quo exercitationem dicta itaque, rem ad inventore eos voluptatibus facere enim fuga molestiae quisquam repellat, amet impedit consequatur nemo.</p>
+            <p class="text-[16px] font-light opacity-60 w-[75%]">Seasoned Full Stack Software Engineer with over 8 years of hands-on experience in designing and implementing robust, scalable, and innovative web solutions, Adept at leveraging a comprehensive skill set encompassing front-end and back-end technologies</p>
             <div class="flex justify-start items-cente my-10">
-                <img src="images/email.png" alt="email" class="w-[18px] mr-1">
-                <p class="text-[16px] font-normal opacity-70">tegrand@exaple.com</p>
+                <img src="images/email.png" alt="email" class="w-[22px] mr-2">
+                <p class="text-[16px] font-normal opacity-70">abmcodenhub@gmail.com</p>
             </div>
 
             <div class="flex justify-start items-center">
-                <img src="images/instagram.png" alt="instagram" class="w-[16px] mr-4">
-                <img src="images/x.png" alt="x" class="w-[16px] mr-4">
-                <img src="images/youtube.png" alt="yt" class="w-[16px] mr-4">
+                <img src="images/instagram.png" alt="instagram" class="w-[24px] mr-8">
+                <img src="images/x.png" alt="x" class="w-[24px] mr-8">
+                <img src="images/youtube.png" alt="yt" class="w-[24px] mr-8">
             </div>
         </section>
     </footer>
