Header section completed

--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -10,9 +10,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-[#181924] text-white">
 
-    
+    <header>
+        <section class="wrapper h-[90px] flex justify-between items-center ">
+            <h1>
+                <img src="images/logo.png" alt="logo" class="w-[120px]">
+            </h1>
+            <ul class="flex justify-end items-center">
+                <li class="mr-10"><a href="#" class="text-[16px] font-normal">About</a></li>
+                <li class="mr-10"><a href="#" class="text-[16px] font-normal">Features</a></li>
+                <li class="mr-10"><a href="#" class="text-[16px] font-normal">Pricing</a></li>
+                <li class=" "><a href="#" class="text-[16px] font-normal py-3 px-5 bg-[#4F4CE5] rounded-full">Get Started</a></li>
+            </ul>
+        </section>
+    </header>
     
 </body>
 </html>
