--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Tool Startup</title>
+    <link rel="icon" href="images/home-image.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,6 +26,17 @@
             </ul>
         </section>
     </header>
+
+    <section class="py-20 bg-[url('images/home-bg.png')] bg-no-repeat bg-cover">
+        <section class="wrapper">
+            <h1 class=" text-center text-[56px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">AI startup tool</h1>
+            <h3 class="text-[48px] font-semibold text-center">Your Personal AI-Powered Branding Expert</h3>
+            <p class="text-center mb-10 font-normal text-[#FF3BFF] text-[22px]">ELEVATE EVERY ASPECT</p>
+            <div class="flex justify-center items-center">
+                <img src="images/home-image.png" alt="image" class="w-[30%]">
+            </div>
+        </section>
+    </section>
     
 </body>
 </html>
