Branding section structured

--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -38,5 +38,41 @@
         </section>
     </section>
     
+    <section>
+        <sectino class="wrapper">
+            <h1></h1>
+            <h3></h3>
+            <div>
+                <div>
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <div>
+                        <img src="" alt="">
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <img src="" alt="">
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+        </sectino>
+    </section>
 </body>
 </html>
