branding section almost design completed

--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -38,38 +38,52 @@
         </section>
     </section>
     
-    <section>
-        <sectino class="wrapper">
-            <h1></h1>
-            <h3></h3>
-            <div>
-                <div>
-                    <h3></h3>
-                    <p></p>
+    <section class="py-20">
+        <section class="wrapper">
+            <h1 class=" text-center text-[48px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Full Power personal Branding</h1>
+            <h3 class="text-[32 px] font-semibold mb-20 text-center ">revolutionizing business with seamless AIintegration</h3>
+            <div class="grid grid-cols-2 gap-20 ">
+                <div class="col-span-1">
+                    <h3 class="text-[24px] mb-3 font-semibold">Title Copy Goes Here Be Awesome</h3>
+                    <p class="text-[14px] font-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
                 </div>
-                <div>
-                    <div>
-                        <img src="" alt="">
+                <div class="col-span-1 bg-[#181924] p-5 rounded-xl">
+                    <div class="flex justify-start pb-3 mb-3 border-b">
+                        <img src="images/stack-pink.png" alt="stack" class="w-[40px] h-[40px] mr-5">
                         <div>
-                            <h3></h3>
-                            <p></p>
+                            <h3 class="text-[22px] font-normal">Tailoring posts</h3>
+                            <p class="text-[16px] font-normal">for various social networks to maximize exposure and audience engagement</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start">
+                        <img src="images/stack-violet.png" alt="stack" class="w-[40px] h-[40px] mr-5">
+                        <div>
+                            <h3 class="text-[22px] font-normal">Auto-engaging</h3>
+                            <p class="text-[16px] font-normal">with your audience to strengthen your online presence and profile score</p>
                         </div>
                     </div>
                 </div>
 
-                <div>
-                    <div>
-                        <img src="" alt="">
+                <div class="col-span-1 bg-[#181924] p-5 rounded-xl">
+                    <div class="flex justify-start pb-3 mb-3 border-b">
+                        <img src="images/stack-pink.png" alt="stack" class="w-[40px] h-[40px] mr-5">
                         <div>
-                            <h3></h3>
-                            <p></p>
+                            <h3 class="text-[22px] font-normal">Tailoring posts</h3>
+                            <p class="text-[16px] font-normal">for various social networks to maximize exposure and audience engagement</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start ">
+                        <img src="images/stack-violet.png" alt="stack" class="w-[40px] h-[40px] mr-5">
+                        <div>
+                            <h3 class="text-[22px] font-normal">Auto-engaging</h3>
+                            <p class="text-[16px] font-normal">with your audience to strengthen your online presence and profile score</p>
                         </div>
                     </div>
                 </div>
 
-                <div>
-                    <h3></h3>
-                    <p></p>
+                <div class="col-span-1">
+                    <h3 class="text-[24px] mb-3 font-semibold">Title Copy Goes Here Be Awesome</h3>
+                    <p class="text-[14px] font-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
                 </div>
             </div>
         </sectino>
