Modes section almost design completed

--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -88,5 +88,36 @@
             </div>
         </sectino>
     </section>
+
+    <section class="py-20">
+        <section class="wrapper">
+
+            <h1 class=" text-center text-[48px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive and Reactive Modes</h1>
+            <h3 class="text-[32px] font-semibold mb-20 text-center ">Stay Ahead in the Branding Game Content:</h3>
+
+            <div class="w-[60%] m-auto grid grid-cols-2 gap-10">
+
+                <div class="col-span-1  bg-[#181924] p-7 pb-12 rounded-3xl">
+                    <h3 class=" text-center text-[32px] font-semibold mb-3 bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive <span class="text-white">mode:</span> </h3>
+                    <p class="text-[16px] text-center mb-32">Regularly publish throught pieces and engage with your audience</p>
+                    <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">CHOOSE THIS MODE</a>
+                </div>
+
+                <div class="col-span-1  bg-[#181924] p-7 pb-12 rounded-3xl">
+                    <h3 class=" text-center text-[32px] font-semibold mb-3 bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive <span class="text-white">mode:</span></h3>
+                    <p class="text-[16px] text-center mb-32">Regularly publish throught pieces and engage with your audience</p>
+                    <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">CHOOSE THIS MODE</a>
+                </div>
+                
+                <div class="col-span-2  bg-[#181924] p-7 pb-12 rounded-3xl">
+                    <h3 class=" text-center text-[32px] mb-3 font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Seamlessly <span class="text-white">switch between modes:</span></h3>
+                    <p class="text-[16px] text-center mb-24">Regularly publish throught pieces and engage with your audience</p>
+                    <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">CHOOSE THIS MODE</a>     
+                </div>
+
+            </div>
+        </sectino>
+    </section>
+
 </body>
 </html>
