footer image section almost design completed

--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -119,5 +119,22 @@
         </sectino>
     </section>
 
+    <section>
+        <section class="wrapper flex justify-between items-center mt-32">
+
+            <div class="w-[35%]">
+                <img src="images/footer-image.png" alt="img" class="w-full">
+            </div>
+
+            <div class="w-[55%]">
+
+                <h3 class="text-[32px] mb-3 font-semibold">Title Copy Goes Here Be Awesome</h3>
+                <p class="text-[16px] font-normal mb-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
+                <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">TALK TO AN EXPERT</a>     
+            </div>
+
+        </section>
+    </section>
+
 </body>
 </html>
