--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -86,7 +86,7 @@
                     <p class="text-[14px] font-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
                 </div>
             </div>
-        </sectino>
+        </section>
     </section>
 
     <section class="py-20">
@@ -116,11 +116,11 @@
                 </div>
 
             </div>
-        </sectino>
+        </section>
     </section>
 
     <section>
-        <section class="wrapper flex justify-between items-center mt-32">
+        <section class="wrapper flex justify-between items-center my-32">
 
             <div class="w-[35%]">
                 <img src="images/footer-image.png" alt="img" class="w-full">
@@ -135,6 +135,14 @@
 
         </section>
     </section>
+
+    <footer class="h-[80px]">
+        <section class="wrapper h-full flex justify-center items-center border-t border-gray-400">
+            <p class="my-1">
+                Copyright © 2022 Company name
+            </p>
+        </section>
+    </footer>
 
 </body>
 </html>
