Home sectino design completed

--- a/day-10/saas-landing-page-asset/saas-landing-page-asset/index.html
+++ b/day-10/saas-landing-page-asset/saas-landing-page-asset/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saas Lnding Page</title>
+    <title>Promage</title>
+    <link rel="icon" href="images/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,36 @@
 </head>
 <body>
 
-    
+    <section  class="bg-[#DAE7FF]">
+        <section class="wrapper">
+            <header class="h-[100px] flex justify-between items-center">
+                <h1>
+                    <img src="images/logo.png" alt="log" class="w-[100px]">
+                </h1>
+                <ul class="flex justify-center items-center">
+                    <li class="mr-10"><a href="#" class="text-[18px] font-normal">Products</a></li>
+                    <li class="mr-10"><a href="#" class="text-[18px] font-normal">Pricing</a></li>
+                    <li class="mr-10"><a href="#" class="text-[18px] font-normal">Developers</a></li>
+                    <li class="mr-10"><a href="#" class="text-[18px] font-normal">Company</a></li>
+                </ul>
+                <ul class="flex justify-center items-center">
+                    <li class="mr-10"><a href="#" class="text-[18px] font-normal py-2 px-7 bg-[#0252C5] rounded-xl text-white border-2  border-[#0252C5]">Sign Up</a></li>
+                    <li class="mr-10"><a href="#" class="text-[18px] font-semibold py-2 px-7 border-2 rounded-xl border-[#0252C5] text-[#0252C5] bg-white">Login</a></li>
+                </ul>
+            </header>
+            <section class="flex py-10 items-center justify-between">
+                <div class="w-[55%] p-10">
+                    <h1 class="text-[50px] font-black leading-tight mb-5">One App To Manage Your Tasks, Projects And Business</h1>
+                    <p class="text-[16px] font-normal mb-10">Manage all your tasks and projects and get real time insight on performance and time management in a single app. Enjoy maximum productivity with Promage.</p>
+                    <a href="#"  class="text-[14px] font-semibold py-4 px-10 bg-[#0252C5] rounded-xl text-white border-2  border-[#0252C5]">Get Started for Free</a>
+                </div>
+                <div class="w-[45%]">
+                    <img src="images/home-right.png" alt="img" class="w-full p-10">
+                </div>
+            </section>
+        </section>
+    </section>
+
     
 </body>
 </html>
