second section design completed

--- a/day-10/saas-landing-page-asset/saas-landing-page-asset/index.html
+++ b/day-10/saas-landing-page-asset/saas-landing-page-asset/index.html
@@ -43,6 +43,20 @@
         </section>
     </section>
 
+    <section class="py-20">
+        <section class="wrapper">
+            <div class="m-auto text-center">
+                <h1 class="text-[18px] font-semibold text-[#536E96]">BE AMONG THE 1% MOST PRODUCTIVE TEAMS IN THE WORLD</h1>
+            </div>
+            <div class="flex justify-center items-center">
+                <img src="images/adroll.png" alt="image" class="w-[160px]">
+                <img src="images/segment.png" alt="image" class="w-[160px]">
+                <img src="images/sendgrid.png" alt="image" class="w-[160px]">
+                <img src="images/toast.png" alt="image" class="w-[160px]">
+            </div>
+        </section>
+    </section>
+
     
 </body>
 </html>
