--- a/day-10/saas-landing-page-asset/saas-landing-page-asset/index.html
+++ b/day-10/saas-landing-page-asset/saas-landing-page-asset/index.html
@@ -69,6 +69,21 @@
         </div>
     </section>
 
+    <section class="flex py-20 px-10 items-center justify-between bg-[#FBFCFC]">
+        
+        <div class="w-[55%] px-20">
+            <h3 class=" text-[20px] text-[#0252C5] font-extrabold mb-10">THE PLATFORM'S PLATFORM</h3>
+            <h1 class="text-[40px] font-black leading-tight my-10">Bring All Of Your Tools Into One Place</h1>
+            <p class="text-[16px] font-normal mb-10">Promage can integrate with your existing tools via native and third-party integrations if you're not ready to replace all of them just yet. To keep everything in one place, sync your team's calendars, chat sevices, could storage, and more.</p>
+            <a href="#"  class="text-[19px] font-semibold py-2 px-8 border rounded-xl border-[#0252C5] text-[#0252C5] bg-white inline-flex justify-center items-center">Get Started <img src="images/arrow.png" alt="arrow" class="w-[16px] ml-2"></a>
+        </div>
+
+        <div class="w-[45%] flex justify-center">
+            <img src="images/tools.png" alt="img" class="w-[65%]">
+        </div>
+
+    </section>
+
 
     
 </body>
