Use cases section completed

--- a/Day-11/saas-landing-page-asset/saas-landing-page-asset/index.html
+++ b/Day-11/saas-landing-page-asset/saas-landing-page-asset/index.html
@@ -74,12 +74,43 @@
             <h3 class=" text-[20px] text-[#0252C5] font-extrabold mb-10">THE PLATFORM'S PLATFORM</h3>
             <h1 class="text-[40px] font-black leading-tight my-10">Bring All Of Your Tools Into One Place</h1>
             <p class="text-[16px] font-normal mb-10">Promage can integrate with your existing tools via native and third-party integrations if you're not ready to replace all of them just yet. To keep everything in one place, sync your team's calendars, chat sevices, could storage, and more.</p>
-            <a href="#"  class="text-[19px] font-semibold py-2 px-8 border rounded-xl border-[#0252C5] text-[#0252C5] bg-white inline-flex justify-center items-center">Get Started <img src="images/arrow.png" alt="arrow" class="w-[16px] ml-2"></a>
+            <a href="#"  class="text-[19px] font-semibold py-2 px-8 border rounded-lg border-[#0252C5] text-[#0252C5] bg-white inline-flex justify-center items-center">Learn More <img src="images/arrow.png" alt="arrow" class="w-[16px] ml-2"></a>
         </div>
         <div class="w-[45%] flex justify-center">
             <img src="images/tools.png" alt="img" class="w-[65%]">
         </div>
     </section>
+
+    <section class="py-20 bg-[#FBFCFC] px-10 ">
+        <section class="wrapper">
+            <h1 class="text-[48px] font-bold mb-10" >Use Cases</h1>
+            <div class="grid grid-cols-2 gap-x-10 gap-y-10 w-[100%] justify-center m-auto">
+                <div class="col-span-1 bg-white p-8 rounded-xl ">
+                    <img src="images/case1.png" alt="image" class="w-[62px]">
+                    <h3 class="text-[24px] font-semibold my-5">Employee On boarding</h3>
+                    <p class="text-[18px] font-normal">Build a scalable on boarding program with individualized tasks and all employee/ staff requirements needed to bring the team up to speed.</p>
+                </div>
+                <div class="col-span-1  bg-white p-8 rounded-xl">
+                    <img src="images/case2.png" alt="image" class="w-[62px]">
+                    <h3 class="text-[24px] font-semibold my-4">Performance & goal tracking</h3>
+                    <p class="text-[18px] font-normal">Track employee performance with real-time reporting that enables you to visualize tasks completed, targets progress towards goals, and much more.</p>
+                </div>
+                <div class="col-span-1  bg-white p-8 rounded-xl ">
+                    <img src="images/case3.png" alt="image" class="w-[62px]">
+                    <h3 class="text-[24px] font-semibold my-4">Performance & goal tracking</h3>
+                    <p class="text-[18px] font-normal">Track employee performance with real-time reporting that enables you to visualize tasks completed, targets progress towards goals, and much more.</p>
+                </div>
+                <div class="col-span-1  bg-white p-8 rounded-xl ">
+                    <img src="images/case4.png" alt="image" class="w-[62px]">
+                    <h3 class="text-[24px] font-semibold my-4">Employee On boarding</h3>
+                    <p class="text-[18px] font-normal">Build a scalable on boarding program with individualized tasks and all employee/ staff requirements needed to bring the team up to speed.</p>
+                </div>
+            </div>
+            <a href="#"  class="text-[19px] font-semibold py-2 px-8 mt-16 border rounded-lg border-[#0252C5] text-[#0252C5] bg-white inline-flex justify-center items-center">Learn More <img src="images/arrow.png" alt="arrow" class="w-[16px] ml-2"></a>
+        </section>
+    </section>
+
+
 
 </body>
 </html>
