--- a/Day-11/saas-landing-page-asset/saas-landing-page-asset/index.html
+++ b/Day-11/saas-landing-page-asset/saas-landing-page-asset/index.html
@@ -130,6 +130,61 @@
         </section>
     </section>
 
+   <footer class="p-10 mb-24 border-y-2">
+        <section class="wrapper flex  py-12">
+            <div class="w-[50%]">
+                <img src="images/logo.png" alt="footer-log" class="w-[100px]">
+                <p class="text-[14px] w-[60%] mt-3">Your No 1 project management tool for better workflow and improved efficiency.</p>
+                <h3 class="text-[16px] font-semibold mt-10 mb-2">Condact</h3>
+                <a>hello@promage.com</a>
+            </div>
+            <div class="w-[50%] m-auto flex justify-center">
+                <table>
+                    <thead>
+                        <tr>
+                            <th class="px-12 py-2 text-left">Company</th>
+                            <th class="px-12 py-2 text-left">Product</th>
+                            <th class="px-12 py-2 text-left">Resources</th>
+                        </tr>
+                    </thead>
+                    <tbody class="font-semibold text-gray-500 text-[12px]">
+                        <tr>
+                            <td class="px-12 py-2">About</td>
+                            <td class="px-12 py-2">Tasks</td>
+                            <td class="px-12 py-2">Quick start</td>
+                        </tr>
+                        <tr>
+                            <td class="px-12 py-2">team</td>
+                            <td class="px-12 py-2">Docs</td>
+                            <td class="px-12 py-2">Libraries</td>
+                        </tr>
+                        <tr>
+                            <td class="px-12 py-2">FAQs</td>
+                            <td class="px-12 py-2">Goals</td>
+                            <td class="px-12 py-2">API Documentation</td>
+                        </tr>
+                        <tr>
+                            <td class="px-12 py-2">Blogs</td>
+                            <td class="px-12 py-2">Chat</td>
+                            <td class="px-12 py-2"></td>
+                        </tr>
+                        <tr>
+                            <td class="px-12 py-2">Career</td>
+                            <td class="px-12 py-2">Whiteboard</td>
+                            <td class="px-12 py-2"></td>
+                        </tr>
+                        <tr>
+                            <td class="px-12 py-2"></td>
+                            <td class="px-12 py-2">dashboard</td>
+                            <td class="px-12 py-2"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+        </section>
+   </footer>
+
 
 
 </body>
