--- a/Day-11/saas-landing-page-asset/saas-landing-page-asset/index.html
+++ b/Day-11/saas-landing-page-asset/saas-landing-page-asset/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -83,7 +84,7 @@
 
     <section class="py-20 bg-[#FBFCFC] px-10 ">
         <section class="wrapper">
-            <h1 class="text-[48px] font-bold mb-10" >Use Cases</h1>
+            <h1 class="text-[48px] font-extrabold mb-10" >Use Cases</h1>
             <div class="grid grid-cols-2 gap-x-10 gap-y-10 w-[100%] justify-center m-auto">
                 <div class="col-span-1 bg-white p-8 rounded-xl ">
                     <img src="images/case1.png" alt="image" class="w-[62px]">
@@ -130,10 +131,10 @@
         </section>
     </section>
 
-   <footer class="p-10 mb-24 border-y-2">
-        <section class="wrapper flex  py-12">
+   <footer class="p-10 mb-24 border-y-2 border-b-stone-300 py-14">
+        <section class="wrapper flex ">
             <div class="w-[50%]">
-                <img src="images/logo.png" alt="footer-log" class="w-[100px]">
+                <img src="images/logo.png" alt="footer-log" class="w-[110px]">
                 <p class="text-[14px] w-[60%] mt-3">Your No 1 project management tool for better workflow and improved efficiency.</p>
                 <h3 class="text-[16px] font-semibold mt-10 mb-2">Condact</h3>
                 <a>hello@promage.com</a>
@@ -147,7 +148,7 @@
                             <th class="px-12 py-2 text-left">Resources</th>
                         </tr>
                     </thead>
-                    <tbody class="font-semibold text-gray-500 text-[12px]">
+                    <tbody class="font-semibold text-gray-500 text-[14px]">
                         <tr>
                             <td class="px-12 py-2">About</td>
                             <td class="px-12 py-2">Tasks</td>
@@ -161,7 +162,7 @@
                         <tr>
                             <td class="px-12 py-2">FAQs</td>
                             <td class="px-12 py-2">Goals</td>
-                            <td class="px-12 py-2">API Documentation</td>
+                            <td class="px-12 py-2 ">API&nbsp;Documentation</td>
                         </tr>
                         <tr>
                             <td class="px-12 py-2">Blogs</td>
@@ -174,9 +175,8 @@
                             <td class="px-12 py-2"></td>
                         </tr>
                         <tr>
-                            <td class="px-12 py-2"></td>
-                            <td class="px-12 py-2">dashboard</td>
-                            <td class="px-12 py-2"></td>
+                            <td class="px-12"></td>
+                            <td class="px-12">dashboard</td>
                         </tr>
                     </tbody>
                 </table>
