--- a/Day-12/resturarant-website-asset/resturarant-website-asset/index.html
+++ b/Day-12/resturarant-website-asset/resturarant-website-asset/index.html
@@ -12,8 +12,19 @@
 </head>
 <body>
 
-    
+    <header>
+        <section class="wrapper h-[90px] flex justify-between items-center">
+            <h1 class="w-[20%]"><img src="images/logo.png" alt="FOODI" class="w-[90px]"></h1>
+            <ul class=" w-[60%] flex gap-10">
+                <li><a href="#" class="text-[16px] font-medium text-[#39DB4A]">Home</a></li>
+                <li><a href="#" class="text-[16px] font-medium">Menu</a></li>
+                <li><a href="#" class="text-[16px] font-medium">Service</a></li>
+                <li><a href="#" class="text-[16px] font-medium">Offers</a></li>
+            </ul>
+            <a href="#" class="text-[16px] text-white font-medium py-2 px-5 bg-[#39DB4A] rounded-full">Contact</a>
+        </section>
+    </header>
 
-    
+
 </body>
 </html>
