home pade designed

--- a/Day-12/resturarant-website-asset/resturarant-website-asset/index.html
+++ b/Day-12/resturarant-website-asset/resturarant-website-asset/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-[#f8f8f8]">
 
     <header>
         <section class="wrapper h-[90px] flex justify-between items-center">
@@ -25,6 +25,21 @@
         </section>
     </header>
 
+    <section>
+        <section class="wrapper flex justify-between items-center">
+            <div class="w-[42%]">
+                <h1 class="text-[46px] font-extrabold leading-tight">Dive into Delights Of Delectable <span class="text-[#39DB4A]">Food</span></h1>
+                <p class="py-10 font-medium mb-4 text-[18px] text-[#555555]">Where Each Plate Weaves a Story of Culinary Mastery and Passionate Craftsmanship</p>
+                <a href="#" class="text-[16px] text-white font-medium py-4 px-10 bg-[#39DB4A] rounded-full">Order Now</a>
+            </div>
+            <div class="w-[55%] p-10">
+                <img src="images/home-right.png" alt="Image" class="w-full ml-4">
+            </div>
+        </section>
+    </section>
 
+    
+
+    
 </body>
 </html>
