--- a/Day-12/resturarant-website-asset/resturarant-website-asset/index.html
+++ b/Day-12/resturarant-website-asset/resturarant-website-asset/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saas Lnding Page</title>
+    <title>FOODI</title>
+    <link rel="icon" href="images/icon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
